kyverno/policies/replica-policy.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: minimum-replicas

spec:
  validationFailureAction:  Enforce
  rules:
    - name: minimum-replicas
      match:
        any:
          - resources:
              kinds:
                - Deployment
      validate:
        message:  "Must have minimum of 3 replicas in deployment!"
        pattern:
          spec:
            replicas: ">=3"
